--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="About Alla Strakhova">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -22,7 +23,7 @@
     <!--NavBar-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Alla Strakhova</a>
+        <a class="navbar-brand" href="index.html" title="Homepage">Alla Strakhova</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,15 +38,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="about.html"
+              <a class="nav-link active" aria-current="page" href="about.html" title="About Alla Strakhova"
                 >About Me</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact Me</a>
+              <a class="nav-link" href="about.html#contact" title="Contact">Contact Me</a>
             </li>
           </ul>
         </div>
@@ -67,28 +68,28 @@
           <img
             src="images/yoga.png"
             class="img-fluid p-2 rounded about-img"
-            alt="yoga"
+            alt="yoga project image"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/weather.png"
             class="img-fluid p-2 rounded about-img"
-            alt="weather"
+            alt="weather project image"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/yogurt.png"
             class="img-fluid p-2 rounded about-img"
-            alt="yogurt"
+            alt="yogurt project image"
           />
         </div>
       </div>
     </div>
     <div id="contact">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:strakhova.ztr@gmail.com" class="email-link">
+      <a href="mailto:strakhova.ztr@gmail.com" class="email-link" title="contact email">
         strakhova.ztr@gmail.com
       </a>
     </div>
