cleanups before deploying on Netlify

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
     <title>About Alla Strakhova</title>
   </head>
   <body>
@@ -89,7 +89,7 @@
     </div>
     <div id="contact">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:strakhova.ztr@gmail.com" class="email-link" title="contact email">
+      <a href="mailto:strakhova.ztr@gmail.com" class="email-link" title="Contact email">
         strakhova.ztr@gmail.com
       </a>
     </div>
