--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
     <title>Alla Strakhova</title>
   </head>
   <body>
